test/test262regex/re262_test.cpp
#include "gtest/gtest.h"

#include "../tools/test262regex/meta.h"

using namespace arsh;
using namespace arsh::re262;

TEST(MetaDataTest, error) {
  const char *input = "";
  std::string err;
  auto ret = TestMetaData::extractFrom(input, &err);
  ASSERT_FALSE(ret.has_value());
  ASSERT_EQ("cannot extract meta data section", err);

  err.clear();
  input = "/*---*/";
  ret = TestMetaData::extractFrom(input, &err);
  ASSERT_FALSE(ret.has_value());
  ASSERT_EQ("cannot extract meta data section", err);

  err.clear();
  input = "/*------*/";
  ret = TestMetaData::extractFrom(input, &err);
  ASSERT_FALSE(ret.has_value());
  ASSERT_EQ("cannot extract meta data section", err);

  err.clear();
  input = R"(/*---
#
 fhaurf
---*/)";
  ret = TestMetaData::extractFrom(input, &err);
  ASSERT_FALSE(ret.has_value());
  ASSERT_EQ("unrecognized line in meta-data section\nfhaurf", err);

  err.clear();
  input = R"(/*---
hoge: hello world
---*/)";
  ret = TestMetaData::extractFrom(input, &err);
  ASSERT_FALSE(ret.has_value());
  ASSERT_EQ("unrecognized attribute: hoge\nhoge: hello world", err);

  err.clear();
  input = R"(/*---
author: [1234]
---*/)";
  ret = TestMetaData::extractFrom(input, &err);
  ASSERT_FALSE(ret.has_value());
  ASSERT_EQ("unrecognized attribute: author\nauthor: [1234]", err);

  err.clear();
  input = R"(/*---
features: >
[hello]
---*/)";
  ret = TestMetaData::extractFrom(input, &err);
  ASSERT_FALSE(ret.has_value());
  ASSERT_EQ("unrecognized attribute: features\nfeatures: >", err);

  err.clear();
  input = R"(/*---
includes: |
[hello]
---*/)";
  ret = TestMetaData::extractFrom(input, &err);
  ASSERT_FALSE(ret.has_value());
  ASSERT_EQ("unrecognized attribute: includes\nincludes: |", err);

  err.clear();
  input = R"(/*---
negative: |
this is
---*/)";
  ret = TestMetaData::extractFrom(input, &err);
  ASSERT_FALSE(ret.has_value());
  ASSERT_EQ("unrecognized attribute: negative\nnegative: |", err);

  err.clear();
  input = R"(/*---
negative:
phase: runtime
type: error
---*/)";
  ret = TestMetaData::extractFrom(input, &err);
  ASSERT_FALSE(ret.has_value());
  ASSERT_EQ("attribute must start with indent in negative:\nphase: runtime", err);

  err.clear();
  input = R"(/*---
negative:
 phase: runtime
type: error
---*/)";
  ret = TestMetaData::extractFrom(input, &err);
  ASSERT_FALSE(ret.has_value());
  ASSERT_EQ("attribute must start with indent in negative:\ntype: error", err);

  err.clear();
  input = R"(/*---
negative:
 phase: runtime
 phase
---*/)";
  ret = TestMetaData::extractFrom(input, &err);
  ASSERT_FALSE(ret.has_value());
  ASSERT_EQ("unrecognized attribute in negative:\nphase", err);

  err.clear();
  input = R"(/*---
negative:
 phase: runtimed
 type: error
---*/)";
  ret = TestMetaData::extractFrom(input, &err);
  ASSERT_FALSE(ret.has_value());
  ASSERT_EQ("unrecognized value in phase: runtimed, must be `parse' or `runtime'", err);

  err.clear();
  input = R"(/*---
negative:
 phase: runtime
 Type: error
---*/)";
  ret = TestMetaData::extractFrom(input, &err);
  ASSERT_FALSE(ret.has_value());
  ASSERT_EQ("unrecognized attribute in negative:\nType: error", err);

  err.clear();
  input = R"(/*---
author: my
negative:
---*/)";
  ret = TestMetaData::extractFrom(input, &err);
  ASSERT_FALSE(ret.has_value());
  ASSERT_EQ("phase or type are not provided", err);

  err.clear();
  input = R"(/*---
author: my
negative:
  phase: parse
---*/)";
  ret = TestMetaData::extractFrom(input, &err);
  ASSERT_FALSE(ret.has_value());
  ASSERT_EQ("phase or type are not provided", err);

  err.clear();
  input = R"(/*---
author: my
negative:
    type: parse error
---*/)";
  ret = TestMetaData::extractFrom(input, &err);
  ASSERT_FALSE(ret.has_value());
  ASSERT_EQ("phase or type are not provided", err);
}

TEST(MetaDataTest, base) {
  const char *input = R"(// Copyright 2025 Mathias Bynens. All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
author: Mathias Bynens
description: >
  Unicode property escapes for `Changes_When_Casemapped`
info: |
  Generated by https://github.com/mathiasbynens/unicode-property-escapes-tests
  Unicode v17.0.0
esid: sec-static-semantics-unicodematchproperty-p
features: [regexp-unicode-property-escapes]
includes: [regExpUtils.js]
---*/

const matchSymbols = buildString({
  loneCodePoints: [
   2345,
)";
  auto ret = TestMetaData::extractFrom(input, nullptr);
  ASSERT_TRUE(ret.has_value());
  ASSERT_EQ("Mathias Bynens", ret.value().author);
  ASSERT_EQ("Unicode property escapes for `Changes_When_Casemapped`", ret.value().description);
  ASSERT_EQ("Generated by https://github.com/mathiasbynens/unicode-property-escapes-tests\nUnicode "
            "v17.0.0",
            ret.value().info);
  ASSERT_EQ("sec-static-semantics-unicodematchproperty-p", ret.value().esid);
  ASSERT_EQ(1, ret.value().features.size());
  ASSERT_EQ("regexp-unicode-property-escapes", ret.value().features[0]);
  ASSERT_EQ(1, ret.value().includes.size());
  ASSERT_EQ("regExpUtils.js", ret.value().includes[0]);
  ASSERT_FALSE(ret.value().negative.has_value());

  //
  input = R"(// Copyright 2018 Mathias Bynens. All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
author: Mathias Bynens
description: >
  Binary properties with an explicit value must throw in Unicode property
  escapes (even if the value is valid).
esid: sec-static-semantics-unicodematchproperty-p
negative:
  phase: parse
  type: SyntaxError
features: [regexp-unicode-property-escapes]
---*/

$DONOTEVALUATE();

/\P{ASCII=No}/u;
)";
  ret = TestMetaData::extractFrom(input, nullptr);
  ASSERT_TRUE(ret.has_value());
  ASSERT_EQ("Mathias Bynens", ret.value().author);
  ASSERT_EQ("Binary properties with an explicit value must throw in Unicode property escapes (even "
            "if the value is valid).",
            ret.value().description);
  ASSERT_EQ("", ret.value().info);
  ASSERT_EQ("sec-static-semantics-unicodematchproperty-p", ret.value().esid);
  ASSERT_EQ(1, ret.value().features.size());
  ASSERT_EQ("regexp-unicode-property-escapes", ret.value().features[0]);
  ASSERT_EQ(0, ret.value().includes.size());
  ASSERT_TRUE(ret.value().negative.has_value());
  ASSERT_EQ(TestMetaData::Phase::PARSE, ret.value().negative.value().phase);
  ASSERT_EQ("SyntaxError", ret.value().negative.value().type);

  //
  input = R"(
// Copyright 2025 Mathias Bynens. All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
author: Mathias Bynens
description: >
  Negating Unicode property escapes for `RGI_Emoji_ZWJ_Sequence` (property of strings) with `\P{…}` throws an early error.
info: |
  Generated by https://github.com/mathiasbynens/unicode-property-escapes-tests
  Unicode v17.0.0
esid: sec-isvalidregularexpressionliteral
features: [regexp-unicode-property-escapes, regexp-v-flag]
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();

/\P{RGI_Emoji_ZWJ_Sequence}/v;
)";
  ret = TestMetaData::extractFrom(input, nullptr);
  ASSERT_TRUE(ret.has_value());
  ASSERT_EQ("Mathias Bynens", ret.value().author);
  ASSERT_EQ("Negating Unicode property escapes for `RGI_Emoji_ZWJ_Sequence` (property of strings) "
            "with `\\P{…}` throws an early error.",
            ret.value().description);
  ASSERT_EQ("Generated by https://github.com/mathiasbynens/unicode-property-escapes-tests\nUnicode "
            "v17.0.0",
            ret.value().info);
  ASSERT_EQ("sec-isvalidregularexpressionliteral", ret.value().esid);
  ASSERT_EQ(2, ret.value().features.size());
  ASSERT_EQ("regexp-unicode-property-escapes", ret.value().features[0]);
  ASSERT_EQ("regexp-v-flag", ret.value().features[1]);
  ASSERT_EQ(0, ret.value().includes.size());
  ASSERT_TRUE(ret.value().negative.has_value());
  ASSERT_EQ(TestMetaData::Phase::PARSE, ret.value().negative.value().phase);
  ASSERT_EQ("SyntaxError", ret.value().negative.value().type);

  //
  input = R"(
// Copyright 2025 Mathias Bynens. All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
author: Mathias Bynens
description: >
  Extended character classes enabled by the RegExp `v` flag support
  properties of strings, string literals, and set operations
info: |
  Generated by https://github.com/mathiasbynens/unicode-property-escapes-tests
  Unicode v17.0.0
esid: sec-patterns
features: [regexp-unicode-property-escapes, regexp-v-flag]
includes: [regExpUtils.js]
---*/

testExtendedCharacterClass({
  regExp: /^[\d--\p{Emoji_Keycap_Sequence}]+$/v,
  expression: "[\d--\p{Emoji_Keycap_Sequence}]",
  matchStrings: [
)";
  ret = TestMetaData::extractFrom(input, nullptr);
  ASSERT_TRUE(ret.has_value());
  ASSERT_EQ("Mathias Bynens", ret.value().author);
  ASSERT_EQ("Extended character classes enabled by the RegExp `v` flag support properties of "
            "strings, string literals, and set operations",
            ret.value().description);
  ASSERT_EQ("Generated by https://github.com/mathiasbynens/unicode-property-escapes-tests\nUnicode "
            "v17.0.0",
            ret.value().info);
  ASSERT_EQ("sec-patterns", ret.value().esid);
  ASSERT_EQ(2, ret.value().features.size());
  ASSERT_EQ("regexp-unicode-property-escapes", ret.value().features[0]);
  ASSERT_EQ("regexp-v-flag", ret.value().features[1]);
  ASSERT_EQ(1, ret.value().includes.size());
  ASSERT_EQ("regExpUtils.js", ret.value().includes[0]);
  ASSERT_FALSE(ret.value().negative.has_value());

  //
  input = R"(// Copyright 2018 Mathias Bynens. All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
author: Mathias Bynens
description: >
  NonemptyClassRanges :: ClassAtom - ClassAtom ClassRanges

  It is a Syntax Error if IsCharacterClass of the first ClassAtom is
  true or IsCharacterClass of the second ClassAtom is true.
esid: sec-patterns-static-semantics-early-errors
negative:
  phase: parse
  type: SyntaxError
features: [regexp-unicode-property-escapes]
---*/

$DONOTEVALUATE();

/[--\p{Hex}]/u;
)";
  ret = TestMetaData::extractFrom(input, nullptr);
  ASSERT_TRUE(ret.has_value());
  ASSERT_EQ("Mathias Bynens", ret.value().author);
  ASSERT_EQ("NonemptyClassRanges :: ClassAtom - ClassAtom ClassRanges\n"
            "It is a Syntax Error if IsCharacterClass of the first ClassAtom is true or "
            "IsCharacterClass of the second ClassAtom is true.",
            ret.value().description);
  ASSERT_EQ("", ret.value().info);
  ASSERT_EQ("sec-patterns-static-semantics-early-errors", ret.value().esid);
  ASSERT_EQ(1, ret.value().features.size());
  ASSERT_EQ("regexp-unicode-property-escapes", ret.value().features[0]);
  ASSERT_EQ(0, ret.value().includes.size());
  ASSERT_TRUE(ret.value().negative.has_value());
  ASSERT_EQ(TestMetaData::Phase::PARSE, ret.value().negative.value().phase);
  ASSERT_EQ("SyntaxError", ret.value().negative.value().type);
}

int main(int argc, char **argv) {
  ::testing::InitGoogleTest(&argc, argv);
  return RUN_ALL_TESTS();
}